# AADS

./: .gitignore  README.md
1/: CMakeLists.txt  README.md  main.c
1/lib/: CMakeLists.txt  vector.h
1/lib/impl/: vector.c
2a/lib/: stack.h
2b/: CMakeLists.txt  README.md
2b/lib/impl/vector/: stack.c
3a/lib/controllers/: controller.h
3a/lib/models/: keyspace2.h
3a/lib/views/impl/: io.c
3b/assets/: test.txt
4a/lib/controllers/: controller.h
4a/lib/models/: node.h
4a/lib/views/: view.h
4b/: CMakeLists.txt
4b/lib/controllers/impl/: controller.c
4b/lib/models/impl/: node.c
4b/lib/views/: view.h
4b/lib/views/impl/: view.c
5/lib/controllers/: CMakeLists.txt  controller.h
5/lib/controllers/impl/: controller.c
5/lib/models/: matrix.h  station.h
5/lib/views/: io.h  view.h
lab1/: README.md  main.c  readme.md  test.txt
lab1/lib/: io_utils.h  matrix.c  matrix.h  vector.c  vector.h
lab1/lib/impl/: matrix.c  vector.c
lab2/: CMakeLists.txt  main.c  readme.md
lab2/lib/: io.h  io_utils.c  list.c  list.h  lstack.c  stack.h  vector.c  vector.h  vstack.c
lab2/lib/impl/: io.c
lab2/lib/impl/list/: list.c  stack.c
lab2/lib/impl/vector/: stack.c  vector.c
lab2a/: CMakeLists.txt  main.c
lab2a/lib/: vector.h
lab2b/lib/: CMakeLists.txt  io.h
lab3/: CMakeLists.txt  README.md  main.c  readme.md
lab3/lib/application/: CMakeLists.txt  application.h
lab3/lib/application/impl/file/: application.c
lab3/lib/application/impl/mem/: application.c
lab3/lib/controller/: CMakeLists.txt  controller.c  controller.h
lab3/lib/controllers/impl/: controller.c
lab3/lib/handlers/: CMakeLists.txt  common.c  common.h  item.c  item.h  keyspace1.c  keyspace1.h  keyspace2.c  keyspace2.h  offset.c  offset.h  table.c  table.h
lab3/lib/handlers/impl/: common.c  item.c  keyspace1.c  keyspace2.c  offset.c  table.c
lab3/lib/models/: CMakeLists.txt  item.h  keyspace1.h  keyspace2.h  table.h
lab3/lib/models/file/: keyspace1.c  keyspace2.c
lab3/lib/models/impl/file/: item.c  table.c
lab3/lib/models/impl/file/helpers/: common.h  item.h  keyspace1.h
lab3/lib/models/impl/file/helpers/impl/: common.c  item.c  keyspace1.c
lab3/lib/models/impl/mem/: item.c  keyspace1.c  keyspace2.c  table.c
lab3/lib/models/mem/: item.c  keyspace1.c  keyspace2.c
lab3/lib/views/: CMakeLists.txt  errors.c  errors.h  io.c  io.h  item.c  item.h  menu.h  table.h  view.c
lab3/lib/views/impl/: io.c  table.c  view.c
lab3a/: CMakeLists.txt
lab3a/lib/models/: keyspace1.h
lab3a/lib/views/: view.h
lab3b/: CMakeLists.txt
lab3b/lib/models/: CMakeLists.txt
lab4/: CMakeLists.txt  main.c
lab4/lab4a/: CMakeLists.txt  main.c
lab4/lab4a/lib/controllers/: controller.h
lab4/lab4a/lib/controllers/impl/: controller.c
lab4/lab4a/lib/models/impl/: node.c
lab4/lab4a/lib/views/: view.h
lab4/lab4a/lib/views/impl/: view.c
lab4/lab4b/: CMakeLists.txt  lab4.ipynb  test.txt
lab4/lab4b/lib/controllers/impl/: controller.c
lab4/lab4b/lib/models/: node.h
lab4/lab4b/lib/models/impl/: node.c
lab4/lab4b/lib/views/impl/: view.c
lab4/lib-balanced/models/: node.h
lab4/lib-default/models/: node.h
lab4/lib-default/views/: io.h
lab4/lib/models/: CMakeLists.txt  node.h
lab4/lib/views/: io.h  view.h
lab4a/: CMakeLists.txt  README.md  main.c
lab4a/lib/controllers/impl/: controller.c
lab4a/lib/models/impl/: node.c
lab4a/lib/views/impl/: view.c
lab4b/: README.md
lab4b/lib/controllers/: controller.h
lab4b/lib/views/: CMakeLists.txt  view.h
lab5/: CMakeLists.txt  README.md  main.c
lab5/assets/: edges.csv  metro.csv  nodes.csv  test-connectivity.txt  test.txt
lab5/lib/controllers/impl/: controller.c
lab5/lib/models/: graph.h  matrix.h  vector.h
lab5/lib/models/impl/: graph.c  matrix.c  vector.c
lab5/lib/views/: view.h
lab5/lib/views/impl/: view.c
(+19 files in other folders)
